<resources>
    <string name="app_name">DoctorAssistant</string>

    <string name="privacypolicy1">
        If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information
        that we collect is used for providing and improving the Service. we will not use or share your information with anyone except as described in this Privacy Policy.
    </string>

    <string name="privacypolicy2">
        The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Vaidya unless otherwise
        defined in this Privacy Policy.
    </string>

    <string name="privacypolicy3">
        The app does use third party services that may collect information used to identify you.
    </string>

    <string name="privacypolicy4">
        we value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it.
        But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.
    </string>

    <string name="privacypolicy5">
        we may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes.
        we will notify you of any changes by posting the new Privacy Policy on this page.
        \n\nThis policy is effective as of 20-05-2020
    </string>
    <string name="privacypolicy6">
        If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at <a href="https://mail.google.com">u.tyagi2013'@gmail.com</a>.
    </string>

</resources>
